--- a/src/index.css
+++ b/src/index.css
@@ -42,20 +42,22 @@ body {
 .input-group {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   gap: 1.5rem;
 }
 
 #user-input label {
   display: block;
   margin-bottom: 0.25rem;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.7rem;
   font-weight: bold;
   text-transform: uppercase;
+  width: calc(50% - .75rem);
 }
 
 #user-input input {
+  margin-top: .5rem;
   width: 100%;
   padding: 0.5rem;
   border: 1px solid #76c0ae;
@@ -66,23 +68,27 @@ body {
 }
 
 #result {
-  max-width: 50rem;
+  max-width: 42rem;
   margin: 2rem auto;
   padding: 1rem;
   table-layout: fixed;
   border-spacing: 1rem;
   text-align: right;
+  display: grid;
 }
 
 #result thead {
-  font-size: 0.7rem;
+  font-size: 0.85rem;
   color: #83e6c0;
 }
 
 #result tbody {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.85rem;
   color: #c2e9e0;
+}
+
+#result td {
+  padding: .5rem 0;
 }
 
 .center {
